// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createFormField(TextField) <TextField { name } /> should render only wrapped input field with defaults 1`] = `
<div
  className="form-item"
>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    type="text"
  />
</div>
`;

exports[`createFormField(TextField) <TextField { name, label } /> should render input and label 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="TF-INPUT_NAME"
  >
    INPUT_LABEL
  </label>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    type="text"
  />
</div>
`;

exports[`createFormField(TextField) <TextField { name, label, errors: [FIRST_ERROR, SECOND_ERROR] } /> should render input and label and two errors 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="TF-INPUT_NAME"
  >
    INPUT_LABEL
  </label>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    type="text"
  />
  <div
    className="errors-list"
  >
    <div
      className="msg msg--error"
    >
      FIRST_ERROR
    </div>
    <div
      className="msg msg--error"
    >
      SECOND_ERROR
    </div>
  </div>
</div>
`;

exports[`createFormField(TextField) <TextField { name, label, errors: [SINGLE_ERROR] } /> should render input and label and single error 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="TF-INPUT_NAME"
  >
    INPUT_LABEL
  </label>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    type="text"
  />
  <div
    className="msg msg--error"
  >
    SINGLE_ERROR
  </div>
</div>
`;

exports[`createFormField(TextField) <TextField { name, placeholder } /> should render input with placeholder 1`] = `
<div
  className="form-item"
>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
</div>
`;

exports[`createFormField(TextField) <TextField { name, placeholder, errors: [FIRST_ERROR, SECOND_ERROR] } /> should render input with placeholder and two errors 1`] = `
<div
  className="form-item"
>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="errors-list"
  >
    <div
      className="msg msg--error"
    >
      FIRST_ERROR
    </div>
    <div
      className="msg msg--error"
    >
      SECOND_ERROR
    </div>
  </div>
</div>
`;

exports[`createFormField(TextField) <TextField { name, placeholder, errors: [SINGLE_ERROR] } /> should render input with placeholder and single error 1`] = `
<div
  className="form-item"
>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="msg msg--error"
  >
    SINGLE_ERROR
  </div>
</div>
`;

exports[`createFormField(TextField) <TextField { name, placeholder, label } /> should render input with placeholder and label 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="TF-INPUT_NAME"
  >
    INPUT_LABEL
  </label>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
</div>
`;

exports[`createFormField(TextField) <TextField { name, placeholder, label, errors: [FIRST_ERROR, SECOND_ERROR] } /> should render input with placeholder and label and two errors 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="TF-INPUT_NAME"
  >
    INPUT_LABEL
  </label>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="errors-list"
  >
    <div
      className="msg msg--error"
    >
      FIRST_ERROR
    </div>
    <div
      className="msg msg--error"
    >
      SECOND_ERROR
    </div>
  </div>
</div>
`;

exports[`createFormField(TextField) <TextField { name, placeholder, label, errors: [SINGLE_ERROR] } /> should render input with placeholder and label and single error 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="TF-INPUT_NAME"
  >
    INPUT_LABEL
  </label>
  <input
    className="textfield"
    id="TF-INPUT_NAME"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="msg msg--error"
  >
    SINGLE_ERROR
  </div>
</div>
`;
